Basic HTML layout added with content

--- a/index.html
+++ b/index.html
@@ -1,48 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<meta name="Description" content="Enter your description here"/>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.5.2/cosmo/bootstrap.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
-<link rel="stylesheet" href="assets/css/style.css">
-<title>Film Pairs</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="Description" content="Enter your description here" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.5.2/cosmo/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Film Pairs</title>
 </head>
+
 <body>
+    <header></header>
+    <row>
+        <div class="welcome">
+            <div>
+                <h1>Introducing The All New Pairs Matching Film Trivia Quiz Game Challenge!</h1>
+            </div>
+            <br>
+            <h5>What is it?</h5>
+            <p> Great question. This isn't your average pairs game, oh no no. Here you'll have you use every bit of your memory based
+                pair matching skills, but you'll also need to call upon your film based trivia knowledge.</p>
+            <br>
+            <h5>How to Play </h5>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">FILM QUIZ!</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+            <p>All you have to do it match the film quote to the film. Easy.
 
-<div class="welcome">
-    <div><h1>Welcome!</h1></div>
-    <h3>Congratulations on finding the websites best film quiz!</h3>
-        <p> This isn't your average pairs game, oh no no. Here you'll have you use every bit of your memory based pair matching skills, 
-        but also call upon your film based trivia knowledge.
+                Click on any of the cards to reveal the quote or image behind it. Then try to find the matching film or
+                quote.
+                The game is timed and you'll receive bonus points for how quickly you complete the game.
+                Be careful though, you'll also lose marks depending on how many attempts you take.
+            </p>
+        </div>
+        <div class="cards"></div>
+    </row>
 
-        All you have to do it match the film quote to the film. Easy.
 
-        Click on any of the cards to reveal the quote or image behind it. Then try to find the matching film or quote.
-        The game is timed and you'll receive bonus points for how quickly you complete the game. 
-        Be careful though, you'll also lose marks depending on how many attempts you take.
-    </p>
-</div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+
 </html>
