Play button added to index.html

--- a/index.html
+++ b/index.html
@@ -13,15 +13,19 @@
 </head>
 
 <body>
-    <header></header>
+    <div class="stars">
+<div class="twinkling">
+<div class="clouds">
+    <header>
+        <h1>Introducing The All New Pairs Matching Film Trivia Quiz Game Challenge!</h1>
+    </header>
+
     <row>
+        <column>
         <div class="welcome">
-            <div>
-                <h1>Introducing The All New Pairs Matching Film Trivia Quiz Game Challenge!</h1>
-            </div>
-            <br>
             <h5>What is it?</h5>
-            <p> Great question. This isn't your average pairs game, oh no no. Here you'll have you use every bit of your memory based
+            <p> Great question. This isn't your average pairs game, oh no no. Here you'll have you use every bit of your
+                memory based
                 pair matching skills, but you'll also need to call upon your film based trivia knowledge.</p>
             <br>
             <h5>How to Play </h5>
@@ -33,9 +37,21 @@
                 The game is timed and you'll receive bonus points for how quickly you complete the game.
                 Be careful though, you'll also lose marks depending on how many attempts you take.
             </p>
+            <br>
+                   <button class = "play-button" onclick="play()">Let's Play!</button>
         </div>
+ 
+        </column>
+        <column>     
         <div class="cards"></div>
+         </column>
     </row>
+
+
+
+    </div> 
+    </div>
+    </div>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
