--- a/index.html
+++ b/index.html
@@ -14,43 +14,48 @@
 
 <body>
     <div class="stars">
-<div class="twinkling">
-<div class="clouds">
-    <header>
-        <h1>Introducing The All New Pairs Matching Film Trivia Quiz Game Challenge!</h1>
-    </header>
+        <div class="twinkling">
+            <div class="clouds">
+                <header>
+                    <h1>Introducing The All New Pairs Matching Film Trivia Quiz Game Challenge!</h1>
+                </header>
 
-    <row>
-        <column>
-        <div class="welcome">
-            <h5>What is it?</h5>
-            <p> Great question. This isn't your average pairs game, oh no no. Here you'll have you use every bit of your
-                memory based
-                pair matching skills, but you'll also need to call upon your film based trivia knowledge.</p>
-            <br>
-            <h5>How to Play </h5>
+                <row>
+                    <column>
+                        <div class="welcome">
+                            <h5>What is it?</h5>
+                            <p> Great question. This isn't your average pairs game, oh no no. Here you'll have you use
+                                every bit of your
+                                memory based
+                                pair matching skills, but you'll also need to call upon your film based trivia
+                                knowledge.</p>
+                            <br>
+                            <h5>How to Play </h5>
 
-            <p>All you have to do it match the film quote to the film. Easy.
+                            <p>All you have to do it match the film quote to the film. Easy.
 
-                Click on any of the cards to reveal the quote or image behind it. Then try to find the matching film or
-                quote.
-                The game is timed and you'll receive bonus points for how quickly you complete the game.
-                Be careful though, you'll also lose marks depending on how many attempts you take.
-            </p>
-            <br>
-                   <button class = "play-button" onclick="play()">Let's Play!</button>
+                                Click on any of the cards to reveal the quote or image behind it. Then try to find the
+                                matching film or
+                                quote.
+                                The game is timed and you'll receive bonus points for how quickly you complete the game.
+                                Be careful though, you'll also lose marks depending on how many attempts you take.
+                            </p>
+                            <br>
+                            <button class="play-button" onclick="play()">Let's Play!</button>
+                            
+                            <button class="restart-button" onclick="restart()">Restart</button>
+                        </div>
+
+                    </column>
+                    <column>
+                        <div class="cards"></div>
+                    </column>
+                </row>
+
+
+
+            </div>
         </div>
- 
-        </column>
-        <column>     
-        <div class="cards"></div>
-         </column>
-    </row>
-
-
-
-    </div> 
-    </div>
     </div>
 
 
