--- a/index.html
+++ b/index.html
@@ -42,13 +42,111 @@
                             </p>
                             <br>
                             <button class="play-button" onclick="play()">Let's Play!</button>
-                            
+
                             <button class="restart-button" onclick="restart()">Restart</button>
                         </div>
 
                     </column>
                     <column>
-                        <div class="cards"></div>
+                        <div class="play-area">
+                            <div class="card">
+                                <div class="car-front">
+
+                                </div>
+                                <div class="card-back"></div>
+                            </div>
+                            <div class="card">
+                                <div class="car-front">
+
+                                </div>
+                                <div class="card-back"></div>
+                            </div>
+                            <div class="card">
+                                <div class="car-front">
+
+                                </div>
+                                <div class="card-back"></div>
+                            </div>
+                            <div class="card">
+                                <div class="car-front">
+
+                                </div>
+                                <div class="card-back"></div>
+                            </div>
+                            <div class="card">
+                                <div class="car-front">
+
+                                </div>
+                                <div class="card-back"></div>
+                            </div>
+                            <div class="card">
+                                <div class="car-front">
+
+                                </div>
+                                <div class="card-back"></div>
+                            </div>
+                            <div class="card">
+                                <div class="car-front">
+
+                                </div>
+                                <div class="card-back"></div>
+                            </div>
+                            <div class="card">
+                                <div class="car-front">
+
+                                </div>
+                                <div class="card-back"></div>
+                            </div>
+                            <div class="card">
+                                <div class="car-front">
+
+                                </div>
+                                <div class="card-back"></div>
+                            </div>
+                            <div class="card">
+                                <div class="car-front">
+
+                                </div>
+                                <div class="card-back"></div>
+                            </div>
+                            <div class="card">
+                                <div class="car-front">
+
+                                </div>
+                                <div class="card-back"></div>
+                            </div>
+                            <div class="card">
+                                <div class="car-front">
+
+                                </div>
+                                <div class="card-back"></div>
+                            </div>
+                            <div class="card">
+                                <div class="car-front">
+
+                                </div>
+                                <div class="card-back"></div>
+                            </div>
+                            <div class="card">
+                                <div class="car-front">
+
+                                </div>
+                                <div class="card-back"></div>
+                            </div>
+                            <div class="card">
+                                <div class="car-front">
+
+                                </div>
+                                <div class="card-back"></div>
+                            </div>
+                            <div class="card">
+                                <div class="car-front">
+
+                                </div>
+                                <div class="card-back"></div>
+                            </div>
+
+                        </div>
                     </column>
                 </row>
 
