Added more card images for javaScript shuffle testing

--- a/index.html
+++ b/index.html
@@ -60,33 +60,37 @@
                                 Top Score: 0
                             </div>
                         </div>
+
                         <div class="card" onclick="flip(event)">
-                            
-                                <img class=" card-front card-image" src="assets/images/card-ill-be-back.png">
-                                <img class="card-back card-image" src="assets/images/card-back.png">
-                            </div>
+                            <img class=" card-front card-image" src="assets/images/card-ill-be-back.png">
+                            <img class="card-back card-image" src="assets/images/card-back.png">
+                        </div>
+
                         <div class="card" onclick="flip(event)">
-                            <div class="card-front">
-                                <img class="card-image" src="assets/images/terminator.png"></div>
-                            <div class="card-back">
-                                <img class="card-image" src="assets/images/card-back.png"></div>
+                            <img class="card-image card-front" src="assets/images/terminator.png">
+                            <img class="card-back card-image" src="assets/images/card-back.png">
                         </div>
-                        <div class="card">
 
-                            <div class="card-back"></div>
+                        <div class="card" onclick="flip(event)">
+                            <img class="card-image card-front" src="assets/images/300.png">
+                            <img class="card-back card-image" src="assets/images/card-back.png">
                         </div>
-                        <div class="card">
-                            <div class="car-front">
 
-                            </div>
-                            <div class="card-back"></div>
+                        <div class="card" onclick="flip(event)">
+                            <img class="card-image card-front" src="assets/images/this-is-sparta.png">
+                            <img class="card-back card-image" src="assets/images/card-back.png">
                         </div>
-                        <div class="card">
-                            <div class="car-front">
 
-                            </div>
-                            <div class="card-back"></div>
+                        <div class="card" onclick="flip(event)">
+                            <img class="card-image card-front" src="assets/images/nemo.png">
+                            <img class="card-back card-image" src="assets/images/card-back.png">
                         </div>
+
+                        <div class="card" onclick="flip(event)">
+                            <img class="card-image card-front" src="assets/images/keep-swimming.png">
+                            <img class="card-back card-image" src="assets/images/card-back.png">
+                        </div>
+                        
                         <div class="card">
                             <div class="car-front">
 
@@ -160,10 +164,10 @@
                             <div class="card-back"></div>
                         </div>
                     </div>
-</div>
-</div>
                 </div>
             </div>
+        </div>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
