--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
 
                     <div class="game-container">
                         <div class="game-info-container">
-                            <div class="game-info">
+                            <div class="timer">
                                 Time 00:00
                             </div>
-                            <div class="game-info">
+                            <div class="matches">
                                 Matches 0/0
                             </div>
 
-                            <div class="game-info">
+                            <div class="current-score">
                                 Current Score: 0
                             </div>
-                            <div class="game-info">
+                            <div class="top-score">
                                 Top Score: 0
                             </div>
                         </div>
