--- a/index.html
+++ b/index.html
@@ -61,108 +61,90 @@
                             </div>
                         </div>
 
-                        <div class="card" onclick="flip(event)">
-                            <img class=" card-front card-image" src="assets/images/card-ill-be-back.png">
-                            <img class="card-back card-image" src="assets/images/card-back.png">
+                        <div class="card" data-framework = "terminator">
+                            <img class="card-front" src="assets/images/card-ill-be-back.png">
+                            <img class="card-back" src="assets/images/card-back.png">
                         </div>
 
-                        <div class="card" onclick="flip(event)">
-                            <img class="card-image card-front" src="assets/images/terminator.png">
-                            <img class="card-back card-image" src="assets/images/card-back.png">
+                        <div class="card" data-framework = "terminator">
+                            <img class="card-front" src="assets/images/terminator.png">
+                            <img class="card-back" src="assets/images/card-back.png">
                         </div>
 
-                        <div class="card" onclick="flip(event)">
-                            <img class="card-image card-front" src="assets/images/300.png">
-                            <img class="card-back card-image" src="assets/images/card-back.png">
+                        <div class="card" data-framework="300">
+                            <img class="card-front" src="assets/images/300.png">
+                            <img class="card-back" src="assets/images/card-back.png">
                         </div>
 
-                        <div class="card" onclick="flip(event)">
-                            <img class="card-image card-front" src="assets/images/this-is-sparta.png">
-                            <img class="card-back card-image" src="assets/images/card-back.png">
+                        <div class="card" data-framework="300">
+                            <img class="card-front" src="assets/images/this-is-sparta.png">
+                            <img class="card-back" src="assets/images/card-back.png">
                         </div>
 
-                        <div class="card" onclick="flip(event)">
-                            <img class="card-image card-front" src="assets/images/nemo.png">
-                            <img class="card-back card-image" src="assets/images/card-back.png">
+                        <div class="card" data-framework="nemo">
+                            <img class="card-front" src="assets/images/nemo.png">
+                            <img class="card-back" src="assets/images/card-back.png">
                         </div>
 
-                        <div class="card" onclick="flip(event)">
-                            <img class="card-image card-front" src="assets/images/keep-swimming.png">
-                            <img class="card-back card-image" src="assets/images/card-back.png">
+                        <div class="card" data-framework="nemo">
+                            <img class="card-front" src="assets/images/keep-swimming.png">
+                            <img class="card-back" src="assets/images/card-back.png">
                         </div>
+
+                        <div class="card" data-framework="zoolander">
+                            <img class="card-front" src="assets/images/center-for-ants.png">
+                            <img class="card-back" src="assets/images/card-back.png">
+                        </div>
+
+                        <div class="card" data-framework="zoolander">
+                            <img class="card-front" src="assets/images/zoolander.png">
+                            <img class="card-back" src="assets/images/card-back.png">
+                        </div>
+
+                        <div class="card" data-framework="spider-man">
+                            <img class="card-front" src="assets/images/spider-man.png">
+                            <img class="card-back" src="assets/images/card-back.png">
+                        </div>
+
+                        <div class="card" data-framework="spider-man">
+                            <img class="card-front" src="assets/images/great-responsibility.png">
+                            <img class="card-back" src="assets/images/card-back.png">
+                        </div>
+
+                        <div class="card" data-framework="hunger-games">
+                            <img class="card-front" src="assets/images/hunger-games.png">
+                            <img class="card-back" src="assets/images/card-back.png">
+                        </div>
+
+                        <div class="card" data-framework="hunger-games">
+                            <img class="card-front" src="assets/images/volunteer-as-tribute.png">
+                            <img class="card-back" src="assets/images/card-back.png">
+                        </div>
+
+                        <div class="card" data-framework="elf">
+                            <img class="card-front" src="assets/images/elf.png">
+                            <img class="card-back" src="assets/images/card-back.png">
+                        </div>
+
+                        <div class="card" data-framework="elf">
+                            <img class="card-front" src="assets/images/throne-of-lies.png">
+                            <img class="card-back" src="assets/images/card-back.png">
+                        </div>
+
+                        <div class="card" data-framework="pulp-fiction">
+                            <img class="card-front" src="assets/images/pulp-fiction.png">
+                            <img class="card-back" src="assets/images/card-back.png">
+                        </div>
+
+                        <div class="card" data-framework="pulp-fiction">
+                            <img class="card-front" src="assets/images/royale-with-cheese.png">
+                            <img class="card-back" src="assets/images/card-back.png">
+                        </div>
+
+
+
+
                         
-                        <div class="card">
-                            <div class="car-front">
-
-                            </div>
-                            <div class="card-back"></div>
-                        </div>
-                        <div class="card">
-                            <div class="car-front">
-
-                            </div>
-                            <div class="card-back"></div>
-                        </div>
-                        <div class="card">
-                            <div class="car-front">
-
-                            </div>
-                            <div class="card-back"></div>
-                        </div>
-                        <div class="card">
-                            <div class="car-front">
-
-                            </div>
-                            <div class="card-back"></div>
-                        </div>
-                        <div class="card">
-                            <div class="car-front">
-
-                            </div>
-                            <div class="card-back"></div>
-                        </div>
-                        <div class="card">
-                            <div class="car-front">
-
-                            </div>
-                            <div class="card-back"></div>
-                        </div>
-                        <div class="card">
-                            <div class="car-front">
-
-                            </div>
-                            <div class="card-back"></div>
-                        </div>
-                        <div class="card">
-                            <div class="car-front">
-
-                            </div>
-                            <div class="card-back"></div>
-                        </div>
-                        <div class="card">
-                            <div class="car-front">
-
-                            </div>
-                            <div class="card-back"></div>
-                        </div>
-                        <div class="card">
-                            <div class="car-front">
-
-                            </div>
-                            <div class="card-back"></div>
-                        </div>
-                        <div class="card">
-                            <div class="car-front">
-
-                            </div>
-                            <div class="card-back"></div>
-                        </div>
-                        <div class="card">
-                            <div class="car-front">
-
-                            </div>
-                            <div class="card-back"></div>
-                        </div>
                     </div>
                 </div>
             </div>
