Added difficulty buttons

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
                             Be careful though, you'll also lose marks depending on how many attempts you take.
                         </p>
                         <br>
+                        <h4>Choose your difficulty!</h4>
+                            <div class="difficulty-settings">
+                                <a class="easy level">Easy</a>
+                                <button class="medium level">Medium</button>
+                                <button class="hard level">Hard</button>
+                            </div>
                         <button class="play-button" onclick="play()">Let's Play!</button>
 
                         <button class="restart-button" onclick="restart()">Restart</button>
