Added classes to difficulty buttons

--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                         <br>
                         <h4>Choose your difficulty!</h4>
                             <div class="difficulty-settings">
-                                <a class="easy level">Easy</a>
-                                <button class="medium level">Medium</button>
-                                <button class="hard level">Hard</button>
+                                <button class="difficulty-button level">Easy</button>
+                                <button class="difficulty-button level">Medium</button>
+                                <button class="difficulty-button level">Hard</button>
                             </div>
-                        <button class="play-button" onclick="play()">Let's Play!</button>
+                        <button class="play-button">Let's Play!</button>
 
-                        <button class="restart-button" onclick="restart()">Restart</button>
+                        <button class="restart-button">Restart</button>
                     </div>
 
                     <div class="game-container">
