Added class 'active' to diffculty buttons

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <br>
                         <h4>Choose your difficulty!</h4>
                             <div class="difficulty-settings">
-                                <button class="difficulty-button level">Easy</button>
+                                <button class="difficulty-button level active">Easy</button>
                                 <button class="difficulty-button level">Medium</button>
                                 <button class="difficulty-button level">Hard</button>
                             </div>
