--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <p>Difficulty Completed: <span id="difficulty-setting-review">Easy</span></p>
             </div>
             <br>
-        <button id="close-overlay" onclick="closeOverlay()">Close and Restart the Game!</button>
+        <button id="close-overlay" onclick="restartGame()">Close and Restart the Game!</button>
     </div>
     </div>
     <div class="stars">
