--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <br>
             <p>Your results:</p>
             <div class="results">
-                <p>Time: <span id="time-taken-review">00:00</span></p>
-                <p>Matches made: 0/<span id="matches-made-review">0</span></p>
+                <p>Time: <span id="time-taken">00:00</span></p>
+                <p>Matches made: <span id="matches-completed">0</span>/8</p>
                 <p>Difficulty Completed: <span id="difficulty-setting-review">Easy</span></p>
             </div>
             <br>
@@ -67,10 +67,10 @@
                     <div id="game-container">
                         <div class="game-info-container">
                             <div class="game-time-info">
-                                Time <span id="timer"> 00:00 </span>
+                                Time: <span id="timer">00:00</span>
                             </div>
                             <div class="matches">
-                                Matches: <span id="matches-made"> 0 </span>
+                                Matches: <span id="matches-made">0</span>/8
                             </div>
 
                             <div class="current-score">
