Added total score div to overlay

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <p>Time: <span id="time-taken">00:00</span></p>
                 <p>Matches made: <span id="matches-completed">0</span>/8</p>
                 <p>Difficulty Completed: <span id="difficulty-setting-review">Easy</span></p>
+                <p>Total Score: <span id="total-score">0</span></p>
             </div>
             <br>
         <button id="close-overlay" onclick="restartGame()">Close and Restart the Game!</button>
