--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             </div>
 
                             <div class="current-score">
-                                Current Score: <span id="score">0</span>
+                                Current Score: <span id="current-score">0</span>
                             </div>
                         </div>
 
