--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <header>
                     <h1>Introducing The All New Pairs Matching Film Trivia Quiz Game Challenge!</h1>
                 </header>
-                <div>
+                <div class="content">
                     <div class="welcome">
                         <h5>What is it?</h5>
                         <p> Great question. This isn't your average pairs game, oh no no. Here you'll have you use
@@ -163,9 +163,10 @@
             </div>
         </div>
     </div>
+    <!--
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>-->
     <script src="assets/js/main.js"></script>
 </body>
 
