Edited class tags to match css stylesheet

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div id="game-completed-overlay">
         <div class="overlay-text">
-            <h1>Congratulations!</h1>
+            <p>Congratulations!</p>
             <br>
             <p>The game has been Completed!</p>
             <br>
@@ -38,14 +38,14 @@
                 </header>
                 <div class="content">
                     <div class="welcome">
-                        <h5>What is it?</h5>
+                        <h2>What is it?</h2>
                         <p> Great question. This isn't your average pairs game, oh no no. Here you'll have you use
                             every bit of your
                             memory based
                             pair matching skills, but you'll also need to call upon your film based trivia
                             knowledge.</p>
                         <br>
-                        <h5>How to Play </h5>
+                        <h2>How to Play </h2>
 
                         <p>All you have to do it match the film quote to the film. Easy.
 
@@ -56,7 +56,7 @@
                             Be careful though, you'll also lose marks depending on how many attempts you take.
                         </p>
                         <br>
-                        <h4>Choose your difficulty!</h4>
+                        <h3>Choose your difficulty!</h3>
                         <div class="difficulty-settings">
                             <button class="difficulty-button level active">Easy</button>
                             <button class="difficulty-button level">Medium</button>
