Added time bonus message to game completed overlay

--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
             <p>Your results:</p>
             <div class="results">
                 <p>Time: <span id="time-taken">00:00</span></p>
+                <p class="time-bonus-text">Your time gave you a <span id="time-bonus">x1.2</span> bonus!</p>
                 <p>Matches made: <span id="matches-completed">0</span>/8</p>
                 <p>Difficulty Completed: <span id="difficulty-setting-review">Easy</span></p>
                 <p>Total Score: <span id="total-score">0</span></p>
+                <p></p>
             </div>
             <br>
             <button id="close-overlay" onclick="restartGame()">Close and Restart the Game!</button>
