Edited overlay for better syntax

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 <body>
     <div id="game-completed-overlay">
         <div class="overlay-text">
-            <p>Congratulations!</p>
+            <h1>Congratulations!</h1>
             <br>
-            <p>The game has been Completed!</p>
+            <h2>The game has been Completed!</h2>
             <br>
-            <p>Your results:</p>
+            <h3>Your results:</h3>
             <div class="results">
                 <p>Time: <span id="time-taken">00:00</span></p>
                 <p class="time-bonus-text">Your time gave you a <span id="time-bonus">x1.2</span> bonus!</p>
                 <p>Matches made: <span id="matches-completed">0</span>/8</p>
                 <p>Difficulty Completed: <span id="difficulty-setting-review">Easy</span></p>
-                <p>Total Score: <span id="total-score">0</span></p>
+                <p class="total-score-message">Total Score: <span id="total-score">0</span></p>
                 <p></p>
             </div>
             <br>
